--- a/.github/workflows/html_dir_to_gh_pages.yaml
+++ b/.github/workflows/html_dir_to_gh_pages.yaml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Running the HTML dir to gh-pages Action
-        uses: uibcdf/action-html-dir-to-gh-pages@v1.0.0
+      - name: HTML dir to GitHub Pages
+        uses: uibcdf/action-html-dir-to-gh-pages@1.0.0
         with:
           branch: main
           html_dir: docs/_build/html
