--- a/.github/workflows/html_dir_to_gh_pages.yaml
+++ b/.github/workflows/html_dir_to_gh_pages.yaml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 # workflow_dispatch:        # Un comment line if you also want to trigger action manually
 
 jobs:
@@ -17,10 +23,6 @@ jobs:
         with:
           fetch-depth: 0
       - name: HTML dir to GitHub Pages
-        env: 
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-            GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
         uses: uibcdf/action-html-dir-to-gh-pages@1.0.0
         with:
           branch: main
