--- a/.github/workflows/html_dir_to_gh_pages.yaml
+++ b/.github/workflows/html_dir_to_gh_pages.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: html-docs
+          name: github-pages
           path: docs/html/
       - name: Deploy to GitHub Pages
         id: deployment
