--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ ipykernel = "^6.29.4"
 matplotlib = "^3.8.4"
 pylint = "^3.1.0"
 erdantic = "^1.0.2"
+gitpython = "^3.1.43"
 
 [tool.poetry.group.doc.dependencies]
 sphinx = "^7.3.7"
